<resources>
    <string name="app_name">ff Bazar Admin</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="ads_id_fragment">AdsId</string>
    <string name="payment_request_fragment">PaymentRequest</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="payment_requests">Payment Requests</string>


    <string-array name="ads_list">
        <item>admob</item>
        <item>facebook</item>
        <item>unity</item>
        <item>ironsource</item>
        <item>random</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subcategory">subcategory</string>
    <string name="_152">152</string>
    <string name="price">price</string>
    <string name="enter_uid">Enter Uid</string>
    <string name="approved">Approved</string>
    <string name="setup_ads_id">SetUp Ads Id</string>
    <string name="save">save</string>
    <string name="unityintersid">unityIntersId</string>
    <string name="unitygameid">unityGameId</string>
    <string name="unitybannerid">unityBannerId</string>
    <string name="selectedad">selectedAd</string>
    <string name="ironsourceappkey">ironSourceAppKey</string>
    <string name="interval">interval</string>
    <string name="fanintersid">fanIntersId</string>
    <string name="fanbannerid">fanBannerId</string>
    <string name="admobintersid">admobIntersId</string>
    <string name="admobbannerid">admobBannerId</string>
    <string name="pick_image">Pick Image</string>
    <string name="category_name">Category Name</string>
    <string name="category">category</string>
    <string name="todo">TODO</string>
    <string name="add_subcategory">Add SubCategory</string>
    <string name="subcategory_name">SubCategory Name</string>
    <string name="add_product">Add Product</string>
    <string name="product">Product</string>
    <string name="product_name">Product Name</string>


    <string-array name="approvedOrNot">
        <item> Approve</item>
        <item> Reject</item>
    </string-array>

    <string-array name="catergory_type">
        <item>Type</item>
        <item>category_type 1</item>
        <item>category_type 2</item>
    </string-array>

    <string-array name="child">
        <item>select</item>
        <item>Add category</item>
        <item>Add SubCategory</item>
        <item>Add Product</item>
    </string-array>

    <string-array name="child_type_2">
        <item>select</item>
        <item>Add category</item>
        <item>Add Product</item>
    </string-array>

</resources>