<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/payment_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="@dimen/_10sdp"
        android:src="@drawable/payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_subcategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/merriweather_light"
        android:gravity="center"
        android:text="@string/subcategory"
        app:layout_constrainedWidth="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toEndOf="@id/payment_image"
        app:layout_constraintTop_toTopOf="@+id/payment_image" />

    <TextView
        android:id="@+id/tv_diamond_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:text="@string/_152"
        android:visibility="gone"
        android:textColor="@color/black"
        android:fontFamily="@font/merriweather_light"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toEndOf="@id/payment_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_subcategory" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:text="@string/price"
        android:fontFamily="@font/merriweather_light"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toEndOf="@id/payment_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_diamond_num" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/_3sdp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>